<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/howToPlayTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fontdiner_swanky"
            android:text="@string/how_to_play_title"
            android:textColor="@color/red_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/instructionsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/howToPlayTv"
            android:layout_centerHorizontal="true"
            android:justificationMode="inter_word"
            android:text="@string/how_to_play"
            android:textColor="@color/red_dark" />

        <TextView
            android:id="@+id/CustomGameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instructionsTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fontdiner_swanky"
            android:text="@string/create_custom_game"
            android:textColor="@color/red_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/customGameInstructionsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustomGameTv"
            android:layout_centerHorizontal="true"
            android:justificationMode="inter_word"
            android:text="@string/custom_game_instructions"
            android:textColor="@color/red_dark" />

        <TextView
            android:id="@+id/downloadGameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customGameInstructionsTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fontdiner_swanky"
            android:text="@string/download_custom_game"
            android:textColor="@color/red_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/downloadGameInstructionsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadGameTv"
            android:layout_centerHorizontal="true"
            android:justificationMode="inter_word"
            android:text="@string/download_game_instructions"
            android:textColor="@color/red_dark" />

        <Button
            android:id="@+id/howToPlayCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadGameInstructionsTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/close" />
    </RelativeLayout>
</ScrollView>